--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ ion-icon {
 
 main {
   width: 100%;
-  height: 100vh;
+  height: 91vh;
+  overflow-y: auto;
 }
 
 .messageBox {
@@ -52,7 +53,7 @@ main {
 }
 
 .messageBox div {
-  height: 2.7rem;
+  height: 2.8rem;
   padding-bottom: 0.5rem;
 }
 
