--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ input {
   margin-left: 0.5rem;
   font-weight: 400;
   color: #000000;
-  width: 75%;
+  width: 57%;
   font-size: 1.1rem;
 }
 
@@ -123,4 +123,11 @@ input:focus {
 input::placeholder {
   font-style: italic;
   color: #000000;
+}
+
+select {
+  width: 16%;
+  margin-left: 0.5rem;
+  text-align: center;
+  overflow-y: auto;
 }
