--- a/style.css
+++ b/style.css
@@ -11,6 +11,45 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+/* Pagina de entrada */
+
+.loginpage {
+  width: 100%;
+  height: 100vh;
+  background-color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.logoentrada {
+  width: 8rem;
+  height: 6rem;
+  position: absolute;
+  top: 10%;
+}
+
+.nomeentrada {
+  border-radius: 12px;
+    width: 15rem;
+    height: 4rem;
+    border: 1px solid #D7D7D7;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.loginButton {
+  font-size: 1rem;
+    background-color: #E7E7E7;
+    width: 7rem;
+    height: 3rem;
+    border: 1px solid #E7E7E7;
+    border-radius: 10px;
+}
+
 /* Barra de cima */
 
 .topBar {
@@ -126,8 +165,9 @@ input::placeholder {
 }
 
 select {
+  height: 1.5rem;
+  font-size: 1.1rem;
   width: 16%;
   margin-left: 0.5rem;
   text-align: center;
-  overflow-y: auto;
 }
